Refatorar para utilizar OpenApi
